Fix home grid overflow

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,7 +1,7 @@
 /*START HOME SECTION STYLES*/
 .home-div {
   width: 100%;
-  max-height: 100vh;
+  height: 100%;
   display: grid;
   grid-template-columns: 0.75fr 1fr 1fr minmax(60px, 400px);
   grid-template-rows: 2.5fr minmax(60px, 400px);
